--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "kill": "fuser -k 5000/tcp",
-        "build": "tsc -b --noCheck && vite build",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "kill": "fuser -k 3000/tcp",
         "lint": "eslint .",
         "optimize": "vite optimize",
-        "preview": "vite preview"
+        "preview": "next start"
     },
     "dependencies": {
         "@github/spark": "^0.39.0",
@@ -47,6 +48,7 @@
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.83.1",
+        "@vercel/postgres": "^0.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -57,11 +59,12 @@
         "input-otp": "^1.4.2",
         "lucide-react": "^0.484.0",
         "marked": "^15.0.7",
+        "next": "^15.5.3",
         "next-themes": "^0.4.6",
         "octokit": "^4.1.2",
-        "react": "^19.0.0",
+        "react": "^19.1.1",
         "react-day-picker": "^9.6.7",
-        "react-dom": "^19.0.0",
+        "react-dom": "^19.1.1",
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
